{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 11,
  "lineage": "ff144d13-c58f-3988-660a-c92fcd58a28e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979858932803:internet-gateway/igw-0e4db030e7c112e72",
            "id": "igw-0e4db030e7c112e72",
            "owner_id": "979858932803",
            "region": "eu-west-1",
            "tags": {
              "Name": "seyi-vault-jenkins-igw"
            },
            "tags_all": {
              "Name": "seyi-vault-jenkins-igw"
            },
            "vpc_id": "vpc-0838e7b8bf1c43b4b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979858932803",
            "id": "igw-0e4db030e7c112e72",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e4db030e7c112e72",
            "id": "r-rtb-01113a2791cbd02761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-01113a2791cbd0276",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979858932803",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-1",
            "route_table_id": "rtb-01113a2791cbd0276"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979858932803:route-table/rtb-01113a2791cbd0276",
            "id": "rtb-01113a2791cbd0276",
            "owner_id": "979858932803",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Name": "seyi-vault-jenkins-rt"
            },
            "tags_all": {
              "Name": "seyi-vault-jenkins-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0838e7b8bf1c43b4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979858932803",
            "id": "rtb-01113a2791cbd0276",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08dea510e6a1c87ea",
            "region": "eu-west-1",
            "route_table_id": "rtb-01113a2791cbd0276",
            "subnet_id": "subnet-0f006a348b01f42e3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979858932803",
            "id": "rtbassoc-08dea510e6a1c87ea",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.pub-subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0002fac81021949ee",
            "region": "eu-west-1",
            "route_table_id": "rtb-01113a2791cbd0276",
            "subnet_id": "subnet-0b33ba00eae4b6c71"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979858932803",
            "id": "rtbassoc-0002fac81021949ee",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_route_table.rt",
            "aws_subnet.pub-subnet2",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979858932803:security-group/sg-0e0105ed8bbcdf1da",
            "description": "Allow SSH and HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0105ed8bbcdf1da",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "seyi-vault-jenkins-sg",
            "name_prefix": "",
            "owner_id": "979858932803",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0838e7b8bf1c43b4b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979858932803",
            "id": "sg-0e0105ed8bbcdf1da",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979858932803:subnet/subnet-0f006a348b01f42e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f006a348b01f42e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979858932803",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "seyi-vault-jenkins-subnet1"
            },
            "tags_all": {
              "Name": "seyi-vault-jenkins-subnet1"
            },
            "vpc_id": "vpc-0838e7b8bf1c43b4b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979858932803",
            "id": "subnet-0f006a348b01f42e3",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979858932803:subnet/subnet-0b33ba00eae4b6c71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b33ba00eae4b6c71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "979858932803",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "seyi-vault-jenkins-subnet2"
            },
            "tags_all": {
              "Name": "seyi-vault-jenkins-subnet2"
            },
            "vpc_id": "vpc-0838e7b8bf1c43b4b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979858932803",
            "id": "subnet-0b33ba00eae4b6c71",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:979858932803:vpc/vpc-0838e7b8bf1c43b4b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b9912bc3553280ff",
            "default_route_table_id": "rtb-052d296f725ec2506",
            "default_security_group_id": "sg-070a8d3f988e6f2cf",
            "dhcp_options_id": "dopt-0b65bf5b9315d453c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0838e7b8bf1c43b4b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052d296f725ec2506",
            "owner_id": "979858932803",
            "region": "eu-west-1",
            "tags": {
              "Name": "seyi-vault-jenkins-vpc"
            },
            "tags_all": {
              "Name": "seyi-vault-jenkins-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "979858932803",
            "id": "vpc-0838e7b8bf1c43b4b",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}